@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.03e: *********************************
 
+IMP: (08/27/05, DN) Connections of NodeInst are sorted by port index. This speeds
+    up PortInst.getConnections() method in case of cell instances with many exports.
+
 IMP/IMP: (08/27/05, GVG) Option under ERRORS in Explorer Tree to delete all loggers at once.
 
 BUG: (08/26/05, SMR) When editing "down in place", double-clicks from explorer fail (Bug #506).
